--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/05.06.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/05.06.yml
@@ -10,11 +10,427 @@ defaults:
   - CCAC-05.06-IntegrationByParts
   markdownTabLength: 2
 notes:
-- id: 1565654879288
+- id: 1565894113745
   fields:
     Front: |
-      CCAC 05.06 01: ...
+      CCAC 05.06 01: Evaluate the integral using integration by parts with the indicated choices of $u$ and $dv$.
+      $$$$
+      \int x^{2} \ln x \,dx ; \quad u=\ln x, dv=x^{2} \,dx
+      $$$$
     Back: |
-      ...
+      $$$$
+      \frac{1}{3} x^{3} \ln x-\frac{1}{9} x^{3}+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894291344
+  fields:
+    Front: |
+      CCAC 05.06 03: Evaluate the integral.
+      $$$$
+      \int x \cos 5 x \,dx
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{5} x \sin 5 x+\frac{1}{25} \cos 5 x+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894372844
+  fields:
+    Front: |
+      CCAC 05.06 05: Evaluate the integral.
+      $$$$
+      \int r e^{r / 2} \,dr
+      $$$$
+    Back: |
+      $$$$
+      2(r-2) e^{r / 2}+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894456311
+  fields:
+    Front: |
+      CCAC 05.06 07: Evaluate the integral.
+      $$$$
+      \int x^{2} \sin \pi x \,dx
+      $$$$
+    Back: |
+      $$$$
+      -\frac{1}{\pi} x^{2} \cos \pi x+\frac{2}{\pi^{2}} x \sin \pi x+\frac{2}{\pi^{3}} \cos \pi x+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894536744
+  fields:
+    Front: |
+      CCAC 05.06 09: Evaluate the integral.
+      $$$$
+      \int \ln \sqrt[3]{x} \,dx
+      $$$$
+    Back: |
+      $$$$
+      x \ln \sqrt[3]{x}-\frac{1}{3} x+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894605219
+  fields:
+    Front: |
+      CCAC 05.06 11: Evaluate the integral.
+      $$$$
+      \int \arctan 4 t \,dt
+      $$$$
+    Back: |
+      $$$$
+      t \arctan 4 t-\frac{1}{8} \ln \left(1+16 t^{2}\right)+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894691269
+  fields:
+    Front: |
+      CCAC 05.06 13: Evaluate the integral.
+      $$$$
+      \int e^{2 \theta} \sin 3 \theta \,d\theta
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{13} e^{2 \theta}(2 \sin 3 \theta-3 \cos 3 \theta)+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894788372
+  fields:
+    Front: |
+      CCAC 05.06 15: Evaluate the integral.
+      $$$$
+      \int_{0}^{\pi} t \sin 3 t \,dt
+      $$$$
+    Back: |
+      $$$$
+      \pi / 3
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894853219
+  fields:
+    Front: |
+      CCAC 05.06 17: Evaluate the integral.
+      $$$$
+      \int_{1}^{2} \frac{\ln x}{x^{2}} \,dx
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{2}-\frac{1}{2} \ln 2
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565894931169
+  fields:
+    Front: |
+      CCAC 05.06 19: Evaluate the integral.
+      $$$$
+      \int_{0}^{1} \frac{y}{e^{2 y}} \,dy
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{4}-\frac{3}{4} e^{-2}
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895059494
+  fields:
+    Front: |
+      CCAC 05.06 21: Evaluate the integral.
+      $$$$
+      \int_{0}^{1 / 2} \cos ^{-1} x \,dx
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{6}(\pi+6-3 \sqrt{3})
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895124787
+  fields:
+    Front: |
+      CCAC 05.06 23: Evaluate the integral.
+      $$$$
+      \int_{1}^{2}(\ln x)^{2} \,dx
+      $$$$
+    Back: |
+      $$$$
+      2(\ln 2)^{2}-4 \ln 2+2
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895254869
+  fields:
+    Front: |
+      CCAC 05.06 25: First make a substitution and then use integration by parts to evaluate the integral.
+      $$$$
+      \int \cos \sqrt{x} \,dx
+      $$$$
+    Back: |
+      $$$$
+      2 \sqrt{x} \sin \sqrt{x}+2 \cos \sqrt{x}+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895344520
+  fields:
+    Front: |
+      CCAC 05.06 27: First make a substitution and then use integration by parts to evaluate the integral.
+      $$$$
+      \int_{\sqrt{\pi / 2}}^{\sqrt{\pi}} \theta^{3} \cos \left(\theta^{2}\right) \,d\theta
+      $$$$
+    Back: |
+      $$$$
+      -\frac{1}{2}-\pi / 4
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895433118
+  fields:
+    Front: |
+      CCAC 05.06 29: First make a substitution and then use integration by parts to evaluate the integral.
+      $$$$
+      \int x \ln (1+x) \,dx
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{2}\left(x^{2}-1\right) \ln (1+x)-\frac{1}{4} x^{2}+\frac{1}{2} x+\frac{3}{4}+C
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565895689719
+  media:
+  - path: ${file_dir}/images/CCAC-05.06-31.1.jpg
+  fields:
+    Front: |
+      CCAC 05.06 31: Evaluate the indefinite integral. Illustrate, and check that your answer is reasonable, by graphing both the function and its antiderivative (take $C=0$).
+      $$$$
+      \int x e^{-2 x} \,dx
+      $$$$
+    Back: |
+      $$$$
+      -\frac{1}{2} x e^{-2 x}-\frac{1}{4} e^{-2 x}+C
+      $$$$
+      ![](CCAC-05.06-31.1.jpg)
+    Annotations: ''
+  tags:
+  - requiresCoding
+- id: 1565895832744
+  media:
+  - path: ${file_dir}/images/CCAC-05.06-33.1.jpg
+  fields:
+    Front: |
+      CCAC 05.06 33: Evaluate the indefinite integral. Illustrate, and check that your answer is reasonable, by graphing both the function and its antiderivative (take $C=0$).
+      $$$$
+      \int x^{3} \sqrt{1+x^{2}} \,dx
+      $$$$
+    Back: |
+      $$$$
+      \frac{1}{3} x^{2}\left(1+x^{2}\right)^{3 / 2}-\frac{2}{15}\left(1+x^{2}\right)^{5 / 2}+C
+      $$$$
+      ![](CCAC-05.06-33.1.jpg)
+    Annotations: ''
+  tags:
+  - requiresCoding
+- id: 1565896381243
+  fields:
+    Front: |
+      CCAC 05.06 35:
+      (a) Use the reduction formula in CCAC-05.06 Example 6 to show that
+      $$$$
+      \int \sin ^{2} x \,dx=\frac{x}{2}-\frac{\sin 2 x}{4}+C
+      $$$$
+
+      (b) Use part (a) and the reduction formula to evaluate $\int \sin ^{4} x \,dx$.
+    Back: |
+      (a) Take $n=2$ in Example 6 to get
+      $$$$
+      \begin{align}
+      \int \sin ^{2} x \,dx
+      &= -\frac{1}{2} \cos x \sin x+\frac{1}{2} \int 1 \,dx \\
+      &= \frac{x}{2}-\frac{\sin 2 x}{4}+C
+      \end{align}
+      $$$$
+
+      (b)
+      $$$$
+      \begin{align}
+      \int \sin ^{4} x \,dx
+      &= -\frac{1}{4} \cos x \sin ^{3} x+\frac{3}{4} \int \sin ^{2} x \,dx \\
+      &= -\frac{1}{4} \cos x \sin ^{3} x+\frac{3}{8} x-\frac{3}{16} \sin 2 x+C
+      \end{align}
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565897489920
+  fields:
+    Front: |
+      CCAC 05.06 37:
+      (a) Use the reduction formula in Example 6 to show that
+      $$$$
+      \int_{0}^{\pi / 2} \sin ^{n} x \,dx
+      = \frac{n-1}{n} \int_{0}^{\pi / 2} \sin ^{n-2} x \,dx
+      $$$$
+      where $n \geqslant 2$ is an integer.
+
+      (b) Use part (a) to evaluate $\int_{0}^{\pi / 2} \sin ^{3} x \,dx$ and $\int_{0}^{\pi / 2} \sin ^{5} x \,dx$.
+
+      (c) Use part (a) to show that, for odd powers of sine,
+      $$$$
+      \int_{0}^{\pi / 2} \sin ^{2 n+1} x \,dx
+      = \frac{2 \cdot 4 \cdot 6 \cdot \cdots \cdot 2 n}{3 \cdot 5 \cdot 7 \cdot \cdots \cdot(2 n+1)}.
+      $$$$
+    Back: |
+      (a) From CCAC-05.06 Example 6,
+      $$$$
+      \int \sin ^{n} x \,dx
+      = -\frac{1}{n} \cos x \sin ^{n-1} x+\frac{n-1}{n} \int \sin ^{n-2} x \,dx.
+      $$$$
+      Using (6),
+      $$$$
+      \begin{aligned}
+      \int_{0}^{\pi / 2} \sin ^{n} x \,dx
+      &= \left[-\frac{\cos x \sin ^{n-1} x}{n}\right]_{0}^{\pi / 2}+\frac{n-1}{n} \int_{0}^{\pi / 2} \sin ^{n-2} x \,dx \\
+      &= (0-0)+\frac{n-1}{n} \int_{0}^{\pi / 2} \sin ^{n-2} x \,dx \\
+      &= \frac{n-1}{n} \int_{0}^{\pi / 2} \sin ^{n-2} x \,dx.
+      \end{aligned}
+      $$$$
+
+      (b) Using $n=3$ in part (a), we have
+      $$$$
+      \begin{aligned}
+      \int_{0}^{\pi / 2} \sin ^{3} x \,dx
+      &= \frac{2}{3} \int_{0}^{\pi / 2} \sin x \,dx \\
+      &= \left[-\frac{2}{3} \cos x\right]_{0}^{\pi / 2} \\
+      &= \frac{2}{3}.
+      \end{aligned}
+      $$$$
+      Using $n=5$ in part (a), we have
+      $$$$
+      \begin{aligned}
+      \int_{0}^{\pi / 2} \sin ^{5} x \,dx
+      &= \frac{4}{5} \int_{0}^{\pi / 2} \sin ^{3} x \,dx \\
+      &= \frac{4}{5} \cdot \frac{2}{3} \\
+      &= \frac{8}{15}.
+      \end{aligned}
+      $$$$
+
+      (c) The formula holds for $n=1$ (that is, $2 n+1=3$) by (b). Assume it holds for some $k \geq 1 $. Then
+      $$$$
+      \int_{0}^{\pi / 2} \sin ^{2 k+1} x \,dx
+      = \frac{2 \cdot 4 \cdot 6 \cdots \cdots(2 k)}{3 \cdot 5 \cdot 7 \cdots(2 k+1)}.
+      $$$$
+      By Example 6,
+      $$$$
+      \begin{aligned}
+      \int_{0}^{\pi / 2} \sin ^{2 k+3} x \,dx
+      &= \frac{2 k+2}{2 k+3} \int_{0}^{\pi / 2} \sin ^{2 k+1} x \,dx \\
+      &= \frac{2 k+2}{2 k+3} \cdot \frac{2 \cdot 4 \cdot 6 \cdot \cdots \cdot(2 k)}{3 \cdot 5 \cdot 7 \cdot \cdots \cdot(2 k+1)} \\
+      &= \frac{2 \cdot 4 \cdot 6 \cdots \cdot(2 k)[2(k+1)]}{3 \cdot 5 \cdot 7 \cdots(2 k+1)[2(k+1)+1]}
+      \end{aligned}
+      $$$$
+      so the formula holds for $n=k+1$. By induction, the formula holds for all $n \geq 1$.
+    Annotations: ''
+  tags: []
+- id: 1565898421247
+  fields:
+    Front: |
+      CCAC 05.06 39: Use integration by parts to prove the reduction formula.
+      $$$$
+      \int(\ln x)^{n} \,dx = x(\ln x)^{n}-n \int(\ln x)^{n-1} \,dx
+      $$$$
+    Back: |
+      Let
+      $$$$
+      u=(\ln x)^{n}, dv=dx \Rightarrow du=n(\ln x)^{n-1}(d x / x), v=x.
+      $$$$
+      By CCAC-05.06 Equation 2,
+      $$$$
+      \begin{aligned}
+      \int(\ln x)^{n} \,dx
+      &= x(\ln x)^{n}-\int n x(\ln x)^{n-1}(dx / x) \\
+      &= x(\ln x)^{n}-n \int(\ln x)^{n-1} \,dx.
+      \end{aligned}
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565898753644
+  fields:
+    Front: |
+      CCAC 05.06 41: Use CCAC 05.06 Exercise 39 to find $\int(\ln x)^{3} \,dx$
+    Back: |
+      By repeated applications of the reduction formula in Exercise 39,
+      $$$$
+      \begin{aligned}
+      \int(\ln x)^{3} \,dx
+      &= x(\ln x)^{3}-3 \int(\ln x)^{2} \,dx \\
+      &= x(\ln x)^{3}-3\left[x(\ln x)^{2}-2 \int(\ln x)^{1} \,dx\right] \\
+      &= x(\ln x)^{3}-3 x(\ln x)^{2}+6\left[x(\ln x)^{1}-1 \int(\ln x)^{0} \,dx\right] \\
+      &= x(\ln x)^{3}-3 x(\ln x)^{2}+6 x \ln x-6 \int 1 \,dx \\
+      &= x(\ln x)^{3}-3 x(\ln x)^{2}+6 x \ln x-6 x+C.
+      \end{aligned}
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565898946845
+  fields:
+    Front: >
+      CCAC 05.06 43: A particle that moves along a straight line has velocity $v(t)=t^{2}
+      e^{-t}$ meters per second after $t$ seconds. How far will it travel during the
+      first $t$ seconds?
+    Back: |
+      $$$$
+      2-e^{-t}\left(t^{2}+2 t+2\right) \mathrm{m}
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565899064821
+  fields:
+    Front: |
+      CCAC 05.06 45: Suppose that $f(1)=2, f(4)=7, f^{\prime}(1)=5, f^{\prime}(4)=3,$ and
+      $f^{\prime \prime}$ is continuous. Find the value of $\int_{1}^{4} x f^{\prime \prime}(x) \,dx$.
+    Back: |
+      $$$$
+      2
+      $$$$
+    Annotations: ''
+  tags: []
+- id: 1565899584910
+  fields:
+    Front: |
+      CCAC 05.06 47: If $f(0)=g(0)=0$ and $f^{\prime \prime}$ and $g^{\prime \prime}$ are continuous, show that
+      $$$$
+      \int_{0}^{a} f(x) g^{\prime \prime}(x) \,dx
+      = f(a) g^{\prime}(a)-f^{\prime}(a) g(a)+\int_{0}^{a} f^{\prime \prime}(x) g(x) \,dx
+      $$$$
+    Back: |
+      Suppose $f(0)=g(0)=0$ and let $u=f(x), d v=g^{\prime \prime}(x) d x \Rightarrow d u=f^{\prime}(x) d x, v=g^{\prime}(x)$. Then
+      $$$$
+      \begin{align}
+      \int_{0}^{a} f(x) g^{\prime \prime}(x) \,dx
+      &= \left[f(x) g^{\prime}(x)\right]_{0}^{a}-\int_{0}^{a} f^{\prime}(x) g^{\prime}(x) \,dx \\
+      &= f(a) g^{\prime}(a)-\int_{0}^{a} f^{\prime}(x) g^{\prime}(x) \,dx.
+      \end{align}
+      $$$$
+      Now let $U=f^{\prime}(x), d V=g^{\prime}(x) d x \Rightarrow d U=f^{\prime \prime}(x) d x$ and $V=g(x),$ so
+      $$$$
+      \begin{align}
+      \int_{0}^{a} f^{\prime}(x) g^{\prime}(x) \,dx
+      &= \left[f^{\prime}(x) g(x)\right]_{0}^{a}-\int_{0}^{a} f^{\prime \prime}(x) g(x) \,dx \\
+      &= f^{\prime}(a) g(a)-\int_{0}^{a} f^{\prime \prime}(x) g(x) \,dx.
+      \end{align}
+      $$$$
+      Combining the two results, we get
+      $$$$
+      \int_{0}^{a} f(x) g^{\prime \prime}(x) \,dx
+      = f(a) g^{\prime}(a)-f^{\prime}(a) g(a)+\int_{0}^{a} f^{\prime \prime}(x) g(x) \,dx.
+      $$$$
     Annotations: ''
   tags: []
