--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/05.Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/05.Review.yml
@@ -10,11 +10,574 @@ defaults:
   - CCAC-05.Review
   markdownTabLength: 2
 notes:
-- id: 1565654879965
+- id: 1565988338594
+  fields:
+    Front: "CCAC 05.Review True-False 01: Determine whether the statement is true
+      of false. If is true, explain why.  If it is false, explain why or give an example
+      that disproves the statement.\n\nIf $f$ and $g$ are continuous on $[a, b]$,
+      then\n$$$$\n\\int_{a}^{b}[f(x)+g(x)] \\,dx = \\int_{a}^{b} f(x) \\,dx +\\int_{a}^{b}
+      g(x) \\,dx \n$$$$\n"
+    Back: |
+      True
+    Annotations: ''
+  tags: []
+- id: 1565989046344
+  fields:
+    Front: "CCAC 05.Review True-False 03: Determine whether the statement is true
+      of false. If is true, explain why.  If it is false, explain why or give an example
+      that disproves the statement.\n\nIf $f$ is continuous on $[a, b]$, then\n$$$$\n\\int_{a}^{b}
+      5 f(x) \\,dx =5 \\int_{a}^{b} f(x) \\,dx \n$$$$\n"
+    Back: |
+      True
+    Annotations: ''
+  tags: []
+- id: 1565989120269
   fields:
     Front: |
-      CCAC 05.Review 01: ...
+      CCAC 05.Review True-False 05: Determine whether the statement is true of false. If is true, explain why.  If it is false, explain why or give an example that disproves the statement.
+
+      If $f$ is continuous on $[a, b]$ and $f(x) \geqslant 0$, then
+      $$$$
+      \int_{a}^{b} \sqrt{f(x)} \,dx =\sqrt{\int_{a}^{b} f(x) \,dx }
+      $$$$
     Back: |
-      ...
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989199519
+  fields:
+    Front: "CCAC 05.Review True-False 07: Determine whether the statement is true
+      of false. If is true, explain why.  If it is false, explain why or give an example
+      that disproves the statement.\n\nIf $f$ and $g$ are continuous and $f(x) \\geqslant
+      g(x)$ for $a \\leqslant x \\leqslant b$, then\n$$$$\n\\int_{a}^{b} f(x) \\,dx
+      \ \\geqslant \\int_{a}^{b} g(x) \\,dx \n$$$$\n"
+    Back: |
+      True
+    Annotations: ''
+  tags: []
+- id: 1565989260819
+  fields:
+    Front: |
+      CCAC 05.Review True-False 09: Determine whether the statement is true of false. If is true, explain why.  If it is false, explain why or give an example that disproves the statement.
+      $$$$
+      \int_{-1}^{1}\left(x^{5}-6 x^{9}+\frac{\sin x}{\left(1+x^{4}\right)^{2}}\right) \,dx = 0
+      $$$$
+    Back: |
+      True
+    Annotations: ''
+  tags: []
+- id: 1565989409219
+  fields:
+    Front: |
+      CCAC 05.Review True-False 11: Determine whether the statement is true of false. If is true, explain why.  If it is false, explain why or give an example that disproves the statement.
+
+      $$$$
+      \int_{0}^{4} \frac{x}{x^{2}-1} \,dx =\frac{1}{2} \ln 15
+      $$$$
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989487819
+  fields:
+    Front: >
+      CCAC 05.Review True-False 13: Determine whether the statement is true of false.
+      If is true, explain why.  If it is false, explain why or give an example that
+      disproves the statement.
+
+
+      $\int_{0}^{2}\left(x-x^{3}\right) \,dx$ represents the area under the curve
+      $y=x-x^{3}$ from 0 to 2.
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989531719
+  fields:
+    Front: |
+      CCAC 05.Review True-False 15: Determine whether the statement is true of false. If is true, explain why.  If it is false, explain why or give an example that disproves the statement.
+
+      All continuous functions have derivatives.
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989592743
+  fields:
+    Front: >
+      CCAC 05.Review True-False 17: Determine whether the statement is true of false.
+      If is true, explain why.  If it is false, explain why or give an example that
+      disproves the statement.
+
+
+      If $f$ is continuous, then $\int_{-x}^{\infty} f(x) \,dx =\lim _{t \rightarrow
+      \infty} \int_{-t}^{t} f(x) \,dx$.
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989698594
+  fields:
+    Front: >
+      CCAC 05.Review True-False 19: Determine whether the statement is true of false.
+      If is true, explain why.  If it is false, explain why or give an example that
+      disproves the statement.
+
+
+      If $f$ is a continuous, decreasing function on $[1, \infty)$ and $\lim _{x \rightarrow
+      \infty} f(x)=0,$ then $\int_{1}^{x} f(x) \,dx $ is convergent.
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989781745
+  fields:
+    Front: >
+      CCAC 05.Review True-False 21: Determine whether the statement is true of false.
+      If is true, explain why.  If it is false, explain why or give an example that
+      disproves the statement.
+
+
+      If $\int_{a}^{\infty} f(x) \,dx $ and $\int_{a}^{\infty} g(x) \,dx $ are both
+      divergent, then $\int_{a}^{x}[f(x)+g(x)] \,dx $ is divergent.
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565989857869
+  fields:
+    Front: |
+      CCAC 05.Review True-False 23: Determine whether the statement is true of false. If is true, explain why.  If it is false, explain why or give an example that disproves the statement.
+
+      If $f$ is continuous on $[a, b]$, then
+      $$$$
+      \frac{d}{d x}\left(\int_{a}^{b} f(x) \,dx \right)=f(x)
+      $$$$
+    Back: |
+      False
+    Annotations: ''
+  tags: []
+- id: 1565990260494
+  media:
+  - path: ${file_dir}/images/CCAC-05.Review-01.1.jpg
+  - path: ${file_dir}/images/CCAC-05.Review-01.2.jpg
+  - path: ${file_dir}/images/CCAC-05.Review-01.3.jpg
+  fields:
+    Front: >
+      CCAC 05.Review 01: Use the given graph of $f$ to find the Riemann sum with six
+      subintervals. Take the sample points to be (a) left endpoints and (b) midpoints.
+      In each case draw a diagram and explain what the Riemann sum represents. ![](CCAC-05.Review-01.1.jpg)
+    Back: |
+      (a) 8
+      ![](CCAC-05.Review-01.2.jpg)
+      (b) 5.7
+      ![](CCAC-05.Review-01.3.jpg)
+    Annotations: ''
+  tags: []
+- id: 1565990711594
+  fields:
+    Front: |
+      CCAC 05.Review 03: Evaluate
+      $$$$
+      \int_{0}^{1}(x+\sqrt{1-x^{2}}) \,dx
+      $$$$
+      by interpreting it in terms of areas.
+    Back: |
+      $\frac{1}{2}+\pi / 4$
+    Annotations: ''
+  tags: []
+- id: 1565990802645
+  fields:
+    Front: |
+      CCAC 05.Review 05: If $\int_{0}^{6} f(x) \,dx =10$ and $\int_{0}^{4} f(x) \,dx =7,$ find $\int_{4}^{6} f(x) \,dx $.
+    Back: |
+      3
+    Annotations: ''
+  tags: []
+- id: 1565991044194
+  media:
+  - path: ${file_dir}/images/CCAC-05.Review-07.1.jpg
+  fields:
+    Front: |
+      CCAC 05.Review 07: The following figure shows the graphs of $f, f^{\prime},$ and $\int_{0}^{x} f(t) \,dt$.  Identify each graph, and explain your choices.
+      ![](CCAC-05.Review-07.1.jpg)
+    Back: |
+      $f$ is $c, f^{\prime}$ is $b, \int_{0}^{x} f(t) \,dt$ is $a$
+    Annotations: ''
+  tags: []
+- id: 1565991450322
+  fields:
+    Front: |
+      CCAC 05.Review 09: Evaluate the integral.
+      $$$$
+      \int_{1}^{2}\left(8 x^{3}+3 x^{2}\right) \,dx
+      $$$$
+    Back: |
+      37
+    Annotations: ''
+  tags: []
+- id: 1565991937619
+  fields:
+    Front: "CCAC 05.Review 11: Evaluate the integral.\n$$$$\n\\int_{0}^{1}\\left(1-x^{9}\\right)
+      \\,dx \n$$$$\n"
+    Back: |
+      $\frac{9}{10}$
+    Annotations: ''
+  tags: []
+- id: 1565992887195
+  fields:
+    Front: "CCAC 05.Review 13: Evaluate the integral.\n$$$$\n\\int\\left(\\frac{1-x}{x}\\right)^{2}
+      \\,dx \n$$$$\n"
+    Back: |
+      $-(1 / x)-2 \ln |x|+x+C$
+    Annotations: ''
+  tags: []
+- id: 1565992950545
+  fields:
+    Front: "CCAC 05.Review 15: Evaluate the integral.\n$$$$\n\\int_{0}^{1} \\frac{x}{x^{2}+1}
+      \\,dx \n$$$$\n"
+    Back: |
+      $\frac{1}{2} \ln 2$
+    Annotations: ''
+  tags: []
+- id: 1565993012270
+  fields:
+    Front: |
+      CCAC 05.Review 17: Evaluate the integral.
+      $$$$
+      \int_{0}^{1} v^{2} \cos \left(v^{3}\right) \,dv
+      $$$$
+    Back: |
+      $\frac{1}{3} \sin 1$
+    Annotations: ''
+  tags: []
+- id: 1565993089320
+  fields:
+    Front: |
+      CCAC 05.Review 19: Evaluate the integral.
+      $$$$
+      \int_{0}^{1} e^{\pi t} \,dt
+      $$$$
+    Back: |
+      $(1 / \pi)\left(e^{\pi}-1\right)$
+    Annotations: ''
+  tags: []
+- id: 1565993286619
+  fields:
+    Front: |
+      CCAC 05.Review 21: Evaluate the integral.
+      $$$$
+      \int \frac{x+2}{\sqrt{x^{2}+4 x}} \,dx
+      $$$$
+    Back: |
+      $\sqrt{x^{2}+4 x}+C$
+    Annotations: ''
+  tags: []
+- id: 1565993351819
+  fields:
+    Front: |
+      CCAC 05.Review 23: Evaluate the integral.
+      $$$$
+      \int_{0}^{5} \frac{x}{x+10} \,dx
+      $$$$
+    Back: |
+      $5+10 \ln \frac{2}{3}$
+    Annotations: ''
+  tags: []
+- id: 1565993453070
+  fields:
+    Front: |
+      CCAC 05.Review 25: Evaluate the integral.
+      $$$$
+      \int_{-\pi / 4}^{\pi / 4} \frac{t^{4} \tan t}{2+\cos t} \,dt
+      $$$$
+    Back: |
+      0
+    Annotations: ''
+  tags: []
+- id: 1565993502245
+  fields:
+    Front: |
+      CCAC 05.Review 27: Evaluate the integral.
+      $$$$
+      \int_{1}^{4} x^{3 / 2} \ln x \,dx
+      $$$$
+    Back: |
+      $\frac{64}{5} \ln 4-\frac{124}{25}$
+    Annotations: ''
+  tags: []
+- id: 1565993554969
+  fields:
+    Front: |
+      CCAC 05.Review 29: Evaluate the integral.
+      $$$$
+      \int \frac{dt}{t^{2}+6 t+8}
+      $$$$
+    Back: |
+      $\frac{1}{2} \ln \left|\frac{t+2}{t+4}\right|+C$
+    Annotations: ''
+  tags: []
+- id: 1565993694794
+  fields:
+    Front: |
+      CCAC 05.Review 31: Evaluate the integral.
+      $$$$
+      \int e^{\sqrt[3]{x}} \,dx
+      $$$$
+    Back: |
+      $3 e^{\sqrt[3]{x}}\left(x^{2 / 3}-2 x^{1 / 3}+2\right)+C$
+    Annotations: ''
+  tags: []
+- id: 1565993826719
+  fields:
+    Front: |
+      CCAC 05.Review 33: Evaluate the integral.
+      $$$$
+      \int \frac{\sec \theta \tan \theta}{1+\sec \theta} \,d\theta
+      $$$$
+    Back: |
+      $\ln |1+\sec \theta|+C$
+    Annotations: ''
+  tags: []
+- id: 1565994117119
+  fields:
+    Front: |
+      CCAC 05.Review 35: Evaluate the indefinite integral. Illustrate and check that your answer is reasonable by graphing both the function and its antiderivative (take $C=0$).
+      $$$$
+      \int \frac{\cos x}{\sqrt{1+\sin x}} \,dx
+      $$$$
+    Back: |
+      $2 \sqrt{1+\sin x}+C$
+    Annotations: ''
+  tags:
+  - requiresCoding
+- id: 1565994204220
+  fields:
+    Front: >
+      CCAC 05.Review 37: Use a graph to give a rough estimate of the area of the region
+      that lies under the curve $y=x \sqrt{x}, 0 \leqslant x \leqslant 4$. Then find
+      the exact area.
+    Back: |
+      $\frac{64}{5}$
+    Annotations: ''
+  tags:
+  - requiresCoding
+- id: 1565994320319
+  fields:
+    Front: |
+      CCAC 05.Review 39: Find the derivative of the function.
+      $$$$
+      F(x)=\int_{0}^{x} \frac{t^{2}}{1+t^{3}} \,dt
+      $$$$
+    Back: |
+      $F^{\prime}(x)=x^{2} /\left(1+x^{3}\right)$
+    Annotations: ''
+  tags: []
+- id: 1565994450095
+  fields:
+    Front: |
+      CCAC 05.Review 41: Find the derivative of the function.
+      $$$$
+      y=\int_{\sqrt{x}}^{x} \frac{e^{t}}{t} \,dt
+      $$$$
+    Back: |
+      $y^{\prime}=\left(2 e^{x}-e^{\sqrt{x}}\right) /(2 x)$
+    Annotations: ''
+  tags: []
+- id: 1565994649194
+  fields:
+    Front: |
+      CCAC 05.Review 43: Use the Table of Integrals on the Reference Pages to evaluate the integral.
+      $$$$
+      \int e^{x} \sqrt{1-e^{2 x}} \,dx
+      $$$$
+    Back: |
+      $\frac{1}{2}\left[e^{x} \sqrt{1-e^{2 x}}+\sin ^{-1}\left(e^{x}\right)\right]+C$
+    Annotations: ''
+  tags: []
+- id: 1565994712944
+  fields:
+    Front: |
+      CCAC 05.Review 45: Use the Table of Integrals on the Reference Pages to evaluate the integral.
+      $$$$
+      \int \sqrt{x^{2}+x+1} \,dx
+      $$$$
+    Back: |
+      $\frac{1}{4}(2 x+1) \sqrt{x^{2}+x+1}+\frac{3}{8} \ln \left(x+\frac{1}{2}+\sqrt{x^{2}+x+1}\right)+C$
+    Annotations: ''
+  tags: []
+- id: 1565994863320
+  fields:
+    Front: |
+      CCAC 05.Review 47: Use (a) the Trapezoidal Rule, (b) the Midpoint Rule, and (c) Simpson's Rule with $n=10$ to approximate the given integral. Round your answers to six decimal places. Can you say whether your answers are underestimates or overestimates?
+      $$$$
+      \int_{0}^{1} \sqrt{1+x^{4}} \,dx
+      $$$$
+    Back: |
+      (a) 1.090608 (overestimate)
+      (b) 1.088840 (underestimate)
+      (c) 1.089429 (unknown)
+    Annotations: ''
+  tags: []
+- id: 1565995003019
+  fields:
+    Front: >
+      CCAC 05.Review 49: Estimate the errors involved in CCAC-05.Review Exercise 47,
+      parts (a) and (b).  How large should $n$ be in cach case to guarantee an error
+      of less than 0.00001?
+    Back: |
+      (a) $0.00 \overline{6}, n \geqslant 259$
+      (b) $0.00 \overline{3}, n \geqslant 183$
+    Annotations: ''
+  tags: []
+- id: 1565995265119
+  fields:
+    Front: "CCAC 05.Review 51: \n(a) If $f(x)=\\sin (\\sin x),$ use a graph to find
+      an upper bound for $\\left|f^{(4)}(x)\\right|$.\n(b) Use Simpson's Rule with
+      $n=10$ to approximate $\\int_{0}^{\\pi} f(x) \\,dx$ and use part (a) to estimate
+      the error.\n(c) How large should $n$ be to guarantee that the size of the error
+      in using $S_{n}$ is less than 0.00001?\n"
+    Back: |
+      (a) 3.8
+      (b) 1.7867, 0.000646
+      (c) $n \geqslant 30$
+    Annotations: ''
+  tags:
+  - requiresCoding
+- id: 1565995498169
+  fields:
+    Front: |
+      CCAC 05.Review 53: Use Property 8 of integrals to estimate the value of
+      $$$$
+      \int_{1}^{3} \sqrt{x^{2}+3} \,dx
+      $$$$
+    Back: |
+      $4 \leqslant \int_{1}^{3} \sqrt{x^{2}+3} \,dx \leqslant 4 \sqrt{3}$
+    Annotations: ''
+  tags: []
+- id: 1565995576988
+  fields:
+    Front: |
+      CCAC 05.Review 55: Evaluate the integral or show that it is divergent.
+      $$$$
+      \int_{1}^{\infty} \frac{1}{(2 x+1)^{3}} \,dx
+      $$$$
+    Back: |
+      $\frac{1}{36}$
+    Annotations: ''
+  tags: []
+- id: 1565995628669
+  fields:
+    Front: |
+      CCAC 05.Review 57: Evaluate the integral or show that it is divergent.
+      $$$$
+      \int_{-\infty}^{0} e^{-2 x} \,dx
+      $$$$
+    Back: |
+      Divergent
+    Annotations: ''
+  tags: []
+- id: 1565995675869
+  fields:
+    Front: |
+      CCAC 05.Review 59: Evaluate the integral or show that it is divergent.
+      $$$$
+      \int_{1}^{e} \frac{dx}{x \sqrt{\ln x}}
+      $$$$
+    Back: |
+      2
+    Annotations: ''
+  tags: []
+- id: 1565995781569
+  fields:
+    Front: |
+      CCAC 05.Review 61: Use the Comparison Theorem to determine whether the integral
+      $$$$
+      \int_{1}^{x} \frac{x^{3}}{x^{5}+2} \,dx
+      $$$$
+      is convergent or divergent.
+    Back: |
+      Convergent.
+    Annotations: ''
+  tags: []
+- id: 1565995875194
+  fields:
+    Front: >
+      CCAC 05.Review 63: A particle moves along a line with velocity function $v(t)=t^{2}-t$,
+      where $v$ is measured in meters per second. Find (a) the displacement and (b)
+      the distance traveled by the particle during the time interval $[0,5]$.
+    Back: |
+      (a) $29.1\overline{6} \,\mathrm{m}$
+      (b) $29.5 \,\mathrm{m}$
+    Annotations: ''
+  tags: []
+- id: 1565996096144
+  fields:
+    Front: >
+      CCAC 05.Review 65: Let $r(t)$ be the rate at which the world's oil is consumed,
+      where $t$ is measured in years starting at $t=0$ on January 1, 2000, and $r(t)$
+      is measured in barrels per year. What does $\int_{0}^{8} r(t) \,dt$ represent?
+    Back: |
+      Number of barrels of oil consumed from Jan. 1, 2000, through Jan. 1, 2008
+    Annotations: ''
+  tags: []
+- id: 1565996336421
+  fields:
+    Front: |
+      CCAC 05.Review 67: Suppose that the temperature in a long, thin rod placed along the $x$-axis is initially $C /(2 a)$ if $|x| \leqslant a$ and 0 if $|x|>a$. It can be shown that if the heat diffusivity of the rod is $k$, then the temperature of the rod at the point $x$ at time $t$ is
+      $$$$
+      T(x, t)=\frac{C}{a \sqrt{4 \pi k t}} \int_{0}^{a} e^{-(x-u)^{2} /(4 k t)} \,du
+      $$$$
+      To find the temperature distribution that results from an initial hot spot concentrated at the origin, we need to compute
+      $$$$
+      \lim _{a \rightarrow 0} T(x, t)
+      $$$$
+      Use l'Hospital's Rule to find this limit.
+    Back: |
+      $C e^{-x^{2} /(4 k t)} / \sqrt{4 \pi k t}$
+    Annotations: ''
+  tags: []
+- id: 1565996501270
+  fields:
+    Front: |
+      CCAC 05.Review 69: If $f$ is a continuous function such that
+      $$$$
+      \int_{0}^{x} f(t) \,dt = x e^{2 x}+\int_{0}^{x} e^{-t} f(t) \,dt
+      $$$$
+    Back: |
+      $e^{2 x}(1+2 x) /\left(1-e^{-x}\right)$
+    Annotations: ''
+  tags: []
+- id: 1565996768369
+  fields:
+    Front: |
+      CCAC 05.Review 71: If $f^{\prime}$ is continuous on $[a, b]$, show that
+      $$$$
+      2 \int_{a}^{b} f(x) f^{\prime}(x) \,dx = [f(b)]^{2}-[f(a)]^{2}
+      $$$$
+    Back: >
+      Let $u=f(x)$ and $d u=f^{\prime}(x) \,dx$. So $2 \int_{a}^{b} f(x) f^{\prime}(x)
+      \,dx = 2 \int_{f(a)}^{f(b)} u \,du = \left[u^{2}\right]_{f(a)}^{f(b)} = [f(b)]^{2}-[f(a)]^{2}$.
+    Annotations: ''
+  tags: []
+- id: 1565997049244
+  fields:
+    Front: |
+      CCAC 05.Review 73: If $f^{\prime}$ is continuous on $[0, \infty)$ and $\lim _{x \rightarrow \infty} f(x)=0$, show that
+      $$$$
+      \int_{0}^{\infty} f^{\prime}(x) \,dx = -f(0)
+      $$$$
+    Back: |
+      By the Fundamental Theorem of Calculus,
+      $$$$
+      \begin{aligned}
+      \int_{0}^{\infty} f^{\prime}(x) \,dx
+      &= \lim _{t \rightarrow \infty} \int_{0}^{t} f^{\prime}(x) \,dx \\
+      &= \lim _{t \rightarrow \infty}[f(t)-f(0)] \\
+      &= \lim _{t \rightarrow \infty} f(t)-f(0) \\
+      &= 0-f(0) \\
+      &= -f(0).
+      \end{aligned}
+      $$$$
     Annotations: ''
   tags: []
